Debug for redirect
修正重新導向功能，手機板隱藏文字雲

--- a/css/SystemStyle.css
+++ b/css/SystemStyle.css
@@ -624,4 +624,8 @@ a:hover, a:visited, a:link, a:active {
         display: block;
         margin-bottom: 12px;
     }
+
+    #word-cloud-container, .Word-Cloud {
+        display: none !important;
+    }
 }
